--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
               </div>
             </div>
            </div>
-           <button class="news__button">Показать еще</button>
+           <button class="news__button news__button_white">Показать еще</button>
          </section>
          <section class="author"> 
           <img src="<%=require('./images/image-03.png').default%>" alt="Lapshin Nikita" class="image">
