--- a/src/main.html
+++ b/src/main.html
@@ -104,6 +104,7 @@
                           <div class="swiper-button-next"></div>
                           <div class="swiper-button-prev"></div>
                         </div>
+                         <button class="news__button news__button_none">Открыть в Github</button>
           </section>
           <footer class="footer">
              <p class="footer__copyright">&copy;2020 Лапшин Никита</p>
