try to review 1.0

--- a/src/about.html
+++ b/src/about.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
           <section class="ask">
-            <p class="text text__vertical">Главная<span class="ask__grey"> / Аналитика</span></p>
+            <p class="text text__vertical text__vertical_none"><a href="./index.html" style="text-decoration: none; color: #1A1B22;"> Главная</a><span class="ask__grey"> / Аналитика</span></p>
             <h1 class="title title__ask">Вы спросили: «Путешествия»</h1>
             <p class="text text__ask">Новостей за неделю: <span class="ask__bold"> 34 324</span></p>
             <p class="text text__ask">Упоминаний в загаловках: <span class="ask__bold"> 235</span></p>
@@ -48,13 +48,13 @@
                 <p class="analyze__date">25, вс</p>
               </div>
               <div class="analyze__blockcontainer">
-                <div style="width: 184px;" class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div>
-                <div style="width: 256px;" class="analyze__block"><p class="analyze__text analyze__text_white">18</p></div>
-                <div style="width: 120px;" class="analyze__block"><p class="analyze__text analyze__text_white">11</p></div>
-                <div style="width: 424px;" class="analyze__block"><p class="analyze__text analyze__text_white">39</p></div>
-                <div style="width: 528px;" class="analyze__block"><p class="analyze__text analyze__text_white">45</p></div>
-                <div style="width: 816px;" class="analyze__block"><p class="analyze__text analyze__text_white">73</p></div>
-                <div style="width: 368px;" class="analyze__block"><p class="analyze__text analyze__text_white">34</p></div>
+                <div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div>
+                <div  class="analyze__block"><p class="analyze__text analyze__text_white">18</p></div>
+                <div  class="analyze__block"><p class="analyze__text analyze__text_white">11</p></div>
+                <div  class="analyze__block"><p class="analyze__text analyze__text_white">39</p></div>
+                <div  class="analyze__block"><p class="analyze__text analyze__text_white">45</p></div>
+                <div  class="analyze__block"><p class="analyze__text analyze__text_white">73</p></div>
+                <div  class="analyze__block"><p class="analyze__text analyze__text_white">34</p></div>
               </div>
             </article>
             
