--- a/src/main.html
+++ b/src/main.html
@@ -59,7 +59,7 @@
           <section class="slider">
             <div class="news__box">
               <h1 class="news__header">История коммитов из GitHub</h1>
-              <a href="./about.html" class="text news__text">Открыть в Github <img class="news__arr" src="<%=require('./images/back.png').default%>" alt="arrow"></a>
+              <a href="https://github.com/Nikita-hub000/diploma" class="text news__text news__text_none">Открыть в Github <img class="news__arr" src="<%=require('./images/back.png').default%>" alt="arrow"></a>
               </div>
                         <!-- Slider main container -->
                         <div class="swiper-container">
