maked pattern & input focus

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <h1 class="title title__main_white">Что в мире творится?</h1>
         <p class="text text__white">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за прошедшую неделю.</p>
         <div class="field__box">
-          <input type="text" placeholder="Введите тему новости" class="field">
+          <input type="text" pattern="^[а-яА-ЯёЁ]+$" placeholder="Введите тему новости" class="field" required>
           <button class="button text text__white_button">Искать</button>
         </div>
        </div>
