--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
            <a href="./about.html" class="text news__text">Посмотреть аналитику <img class="news__arr" src="<%=require('./images/back.png').default%>" alt="arrow"></a>
            </div>
            <div class="news__container">
-             <div class="card">
+             <!-- <div class="card">
                <img class="card__image" src="<%=require('./images/image_08.png').default%>" alt="image">
                <div>
                <p class="card__date">2 августа, 2019</p>
@@ -96,7 +96,7 @@
               <p class="card__text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
               <p class="card__footer">Медиазона</p>
               </div>
-            </div>
+            </div> -->
            </div>
            <button class="news__button news__button_white">Показать еще</button>
          </section>
