maked true date for NewCards

--- a/src/main.html
+++ b/src/main.html
@@ -64,7 +64,7 @@
                         <!-- Slider main container -->
                         <div class="swiper-container">
                           <div class="swiper-wrapper">
-                            <div class="swiper-slide">
+                            <!-- <div class="swiper-slide">
                               <p class="slider__header slider__header_white">14 августа, 2019</p>
                               <div class="slider__box">
                                 <img src="<%=require('./images/image-slider1.png').default%>" alt="author" class="swiper__img">
@@ -96,7 +96,7 @@
                                 </div>
                               </div>
                               <p class="slider__text">With Emmet, you can type CSS-like expressions that can be dynamically parsed, and produce output depending on what you type in the abb...</p>
-                            </div>
+                            </div> -->
                           </div>
                           <!-- Add Pagination -->
                           <div class="swiper-pagination"></div>
