--- a/src/about.html
+++ b/src/about.html
@@ -20,14 +20,14 @@
         </header>
           <section class="ask">
             <p class="text text__vertical text__vertical_none"><a href="./index.html" style="text-decoration: none; color: #1A1B22;"> Главная</a><span class="ask__grey"> / Аналитика</span></p>
-            <h1 class="title title__ask">Вы спросили: «Путешествия»</h1>
-            <p class="text text__ask">Новостей за неделю: <span class="ask__bold"> 34 324</span></p>
-            <p class="text text__ask">Упоминаний в загаловках: <span class="ask__bold"> 235</span></p>
+            <h1 class="title title__ask">Вы спросили: «<span class="result">Путешествия</span>»</h1>
+            <p class="text text__ask">Новостей за неделю: <span class="ask__bold week"> 34 324</span></p>
+            <p class="text text__ask">Упоминаний в загаловках: <span class="ask__bold mention"> 235</span></p>
           </section>
           <section class="analyze">
             <h1 class="title title__analyze">Аналитика по дням</h1>
             <article class="analyze__container">
-                <p class="analyze__text analyze__text_grey">Дата (Август)</p>
+                <p class="analyze__text analyze__text_grey">Дата (<span class="month">Август</span>)</p>
                 <p class="analyze__text analyze__text_grey">Кол-во упоминаний</p>
             </article>
             <article class="analyze__box">
@@ -37,25 +37,14 @@
               <p class="analyze__text analyze__text_grey">75</p>
               <p class="analyze__text analyze__text_grey">100</p>
             </article>
-            <article class="analyze__container">
-              <div>
-                <p class="analyze__date">19, пн</p>
-                <p class="analyze__date">20, вт</p>
-                <p class="analyze__date">21, ср</p>
-                <p class="analyze__date">22, чт</p>
-                <p class="analyze__date">23, пт</p>
-                <p class="analyze__date">24, сб</p>
-                <p class="analyze__date">25, вс</p>
-              </div>
-              <div class="analyze__blockcontainer">
-                <div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div>
-                <div  class="analyze__block"><p class="analyze__text analyze__text_white">18</p></div>
-                <div  class="analyze__block"><p class="analyze__text analyze__text_white">11</p></div>
-                <div  class="analyze__block"><p class="analyze__text analyze__text_white">39</p></div>
-                <div  class="analyze__block"><p class="analyze__text analyze__text_white">45</p></div>
-                <div  class="analyze__block"><p class="analyze__text analyze__text_white">73</p></div>
-                <div  class="analyze__block"><p class="analyze__text analyze__text_white">34</p></div>
-              </div>
+            <article class="analyze__container blocks">
+                 <!-- <div class="analyze__item"><p class="analyze__date">19, пн</p><div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div></div>
+                <div class="analyze__item"><p class="analyze__date">20, вт</p><div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div></div>
+                <div class="analyze__item"><p class="analyze__date">21, ср</p><div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div></div>
+                <div class="analyze__item"><p class="analyze__date">19, пн</p><div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div></div>
+                <div class="analyze__item"><p class="analyze__date">19, пн</p><div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div></div>
+                <div class="analyze__item"><p class="analyze__date">19, пн</p><div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div></div>
+                <div class="analyze__item"><p class="analyze__date">19, пн</p><div  class="analyze__block"><p class="analyze__text analyze__text_white">15</p></div></div> -->
             </article>
             
           </section>
